# CPUEmul

./: CMakeLists.txt
include/: assembler.h  assembly.h  clock_generator.h  cpu.h  cpu_state_out.h  data_reader.h  file.h  simulator.h
src/: assembler.cpp  assembly.cpp  clock_generator.cpp  main.cpp
